# ME597AS

./: .gitignore  README.md
install/: local_setup.sh
install/my_project_name/share/my_project_name/: package.zsh
install/task_2_interfaces/share/task_2_interfaces/: package.sh  package.xml
install/task_3/share/task_3/: package.sh
install/task_4/share/task_4/launch/: turtlebot4_navigator.launch.py
install/task_4/share/task_4/maps/: sync_classroom_map.pgm
install/task_5/share/task_5/: package.sh  package.xml
log/: latest_build
ros2_ws/install/: setup.sh
ros2_ws/install/task_1/share/task_1/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/task_1/launch/: pub_sub_launch.py
ros2_ws/src/task_2/: package.xml
ros2_ws/src/task_2/launch/: service_launch.py
ros2_ws/src/task_3/: metadata.yaml
ros2_ws/src/task_4/: navigation_astar_f24.ipynb  navigation_astar_f24.py
ros2_ws/src/task_4/launch/: gen_sync_map_launch.py  navigator_launch.py
ros2_ws/src/task_4/maps/: sync_classroom_map.yaml
ros2_ws/src/task_5/: package.xml
ros2_ws/src/task_5/task_5/: image_publisher.py
src/task_1/: package.xml  setup.py
src/task_1/launch/install/: local_setup.sh  setup.sh  setup.zsh
src/task_2/: setup.py
src/task_2/launch/install/: local_setup.sh  setup.ps1  setup.zsh
src/task_2_interfaces/: CMakeLists.txt
src/task_3/: setup.py  task_3_0.db3
src/task_3/task_3/: pid_controller.py
src/task_4/: navigation_astar_f24.ipynb  package.xml  setup.py
src/task_4/task_4/: auto_navigator.py
src/task_5/: setup.py
src/task_5/task_5/: object_detector.py
(+11 files in other folders)
