<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_4</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fualbert20030507@gmail.com">albert</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>turtlebot4_viz</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>PIL</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend>copy</exec_depend>
  <exec_depend>time</exec_depend>




  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
